# dotfiles

./: .XCompose  .gitignore  .xinitrc  .zshrc  README.md  flake.nix  treefmt.nix
.cargo/: config.toml
.config/alacritty/: alacritty.toml  alacritty.yml
.config/bspwm/: bspwmrc
.config/dunst/: dunstrc
.config/emacs/: early-init.el  init.el
.config/mpd/: mpd.conf
.config/ncmpcpp/: config
.config/neofetch/: config.conf
.config/picom/: picom.conf
.config/polybar/: config  config.ini  launch.sh
.config/pulse/: default.pa
.config/rofi/: config  config.rasi
.config/sxhkd/: sxhkdrc
.emacs.d/: init.el
.ncmpcpp/: config
.scripts/: low-battery-notify  normalize-music  screenshot  select-song  shutdown-menu  template  update-wallpaper
.scripts/templates/c/: Makefile
dots/: .Xresources  .gtkrc-2.0  .xinitrc  .zshrc
dots/.config/emacs/: early-init.el
dots/.config/neofetch/: config.conf
dots/.config/picom/: picom.conf
dots/.config/polybar/: launch.sh
dots/.scripts/: low-battery-notify  normalize-music
home/: discord.nix  emacs.nix  eza.nix  firefox.nix  home.nix  hyprland.nix  kitty.nix  niri.nix  rofi.nix  theme.nix  thunderbird.nix  zsh.nix
home/anyrun/: default.nix
home/desktop/: default.nix  niri.nix
home/emacs/: default.nix  init.el
home/hyprland/: XCompose  brightness.nix  default.nix  hyprpaper.nix  power-menu.nix  screenshot.nix
home/nx/: default.nix  nx.rb
home/waybar/: default.nix  style.css
hosts/kala/: home.nix  nixos.nix  syncthing.nix
hosts/waso/: home.nix
modules/home-manager/: default.nix  discord.nix  dunst.nix  firefox.nix  fish.nix  git.nix  kitty.nix  rofi.nix  syncthing.nix  theme.nix  thunderbird.nix  zsh.nix
modules/nixos/: default.nix  desktop.nix  dns.nix  documentation.nix  graphics.nix  hardware-configuration.nix  nix.nix  power-saving.nix  sunshine.nix  theme.nix  versioning.nix  virtualisation.nix
nixos/: configuration.nix  graphics.nix  hardware-configuration.nix  keyd.nix  sunshine.nix
nixos/acer/: acer-wmi-battery.nix  default.nix  facer-rgb.nix  rgb.nix
templates/c/: Makefile  flake.nix
templates/haskell/: %%project-name%%.cabal  flake.nix  haskell-template.cabal
templates/ocaml/: dune-project  flake.nix  treefmt.nix
templates/rust/: Cargo.toml  flake.nix  treefmt.nix
(+25 files in other folders)
